examples/negative/parse_errors/L1/reserved_or.ob
MODULE Reserved;

VAR OR: INTEGER;

END Reserved.
